cmake_minimum_required(VERSION 3.5)
idf_component_register(
    SRCS
        "st7789.c"
        "draw.c"
        "demo.c"
        "fonts/verdana8.c"
        "fonts/verdana10.c"
        "fonts/verdana12.c"
        "fonts/verdana14.c"
        "fonts/verdana18.c"
        "fonts/5x7.c"
        "fonts/6x9.c"
        "fonts/digits20.c"
        "fonts/digits32.c"
        "fonts/georgia10.c"
        "fonts/georgia12.c"
        "fonts/georgia14.c"
        "fonts/georgia18.c"
        "fonts/georgia8.c"
        "fonts/tahoma10.c"
        "fonts/tahoma12.c"
        "fonts/tahoma14.c"
        "fonts/tahoma18.c"
        "fonts/tahoma8.c"
        "fonts/courier10.c"
        "fonts/courier12.c"
        "fonts/courier14.c"
        "fonts/courier18.c"
        "fonts/courier24.c"
        "fonts/courier8.c"
        "fonts/helvetica10.c"
        "fonts/helvetica12.c"
        "fonts/helvetica14.c"
        "fonts/helvetica18.c"
        "fonts/helvetica24.c"
        "fonts/helvetica8.c"
        "fonts/lucidabright10.c"
        "fonts/lucidabright12.c"
        "fonts/lucidabright14.c"
        "fonts/lucidabright18.c"
        "fonts/lucidabright19.c"
        "fonts/lucidabright24.c"
        "fonts/lucidabright8.c"
        "fonts/lucidasans10.c"
        "fonts/lucidasans12.c"
        "fonts/lucidasans14.c"
        "fonts/lucidasans18.c"
        "fonts/lucidasans19.c"
        "fonts/lucidasans24.c"
        "fonts/lucidasans28.c"
        "fonts/lucidasans8.c"
        "fonts/times10.c"
        "fonts/times12.c"
        "fonts/times14.c"
        "fonts/times18.c"
        "fonts/times24.c"
        "fonts/times8.c"

    INCLUDE_DIRS
        "."
)
